--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,12 @@ import org.apache.tools.ant.filters.ReplaceTokens
 import org.gradle.internal.os.OperatingSystem
 
 apply plugin: 'groovy'
-apply plugin: 'application'
 apply plugin: 'codenarc'
-apply plugin: 'idea'
+apply plugin: 'signing'
+apply plugin: 'maven'
 
 version       = '0.1.0'
 description   = 'Client for GuerrillaMail Json API'
-mainClassName = 'gm.client.Client'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -34,6 +33,7 @@ ext {
   spockVersion    = '0.7-groovy-2.0'
   codenarcVersion = '0.21'
   jacksonVersion  = '2.4.1'
+  feignVersion    = '6.1.3'
 }
 
 repositories {
@@ -47,6 +47,11 @@ dependencies {
   compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
 
   compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1:'
+
+  // Feign
+  compile "com.netflix.feign:feign-jackson:${feignVersion}"
+  compile "com.netflix.feign:feign-jackson:${feignVersion}"
+
 
   // Testing
   testCompile "org.spockframework:spock-core:${spockVersion}"
@@ -73,3 +78,91 @@ codenarc {
   maxPriority2Violations = 5
   maxPriority3Violations = 10
 }
+
+
+tasks.withType(Groovydoc) {
+  link 'http://download.oracle.com/javase/6/docs/api/',
+         'java.util',
+         'java.lang'
+
+  docTitle    = 'Groovy API Documentation for groovy-pluralize-en $version'
+  windowTitle = 'Groovy API for groovy-pluralize-en $version'
+  footer      = "<p style='text-align: center'>Groovy API Documentation for groovy-pluralize-en $version - Licensed under the Apache License, Version 2.0 - <#
+}
+
+// ----- [ Packaging and publishing ] -----
+
+task sourceJar(type: Jar) {
+  classifier 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: groovydoc) {
+  classifier = 'javadoc'
+  from groovydoc
+}
+
+signing {
+  required { isReleaseVersion && gradle.taskGraph.hasTask('uploadArchives') }
+  sign configurations.archives
+}
+
+artifacts {
+  archives javadocJar
+  archives sourceJar
+  archives jar
+}
+
+uploadArchives { task ->
+  task.onlyIf { isReleaseVersion || ! project.hasProperty('ci') }
+
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+      gradle.taskGraph.whenReady { taskGraph ->
+        if (taskGraph.hasTask(task)) {
+          repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+            authentication(userName: ossrhUsername, password: ossrhPassword)
+          }
+          snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+            authentication(userName: ossrhUsername, password: ossrhPassword)
+          }
+        }
+      }
+
+      pom.project {
+        name "${project.name}:${project.version}"
+        description "${project.description}"
+        inceptionYear '2014'
+        url project_url
+        packaging 'jar'
+
+        scm {
+          connection 'git@github.com:david-w-millar/groovy-pluralize-en.git'
+          developerConnection 'git@github.com:david-w-millar/groovy-pluralize-en.git'
+          url project_url
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'david-w-millar'
+            name 'David W Millar'
+            email 'david.w.millar@gmail.com'
+            organization project_url
+            organizationUrl project_url
+          }
+        }
+
+      }
+    }
+  }
+}
+
+
