--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,3 @@
-/*
- * Copyright 2014 David W Millar
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 import org.apache.tools.ant.filters.ReplaceTokens
 import org.gradle.internal.os.OperatingSystem
 
@@ -21,6 +5,7 @@ apply plugin: 'groovy'
 apply plugin: 'codenarc'
 apply plugin: 'signing'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
 version       = '0.1.0'
 description   = 'Client for GuerrillaMail Json API'
@@ -28,16 +13,18 @@ description   = 'Client for GuerrillaMail Json API'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+defaultTasks 'check', 'jacocoTestReport'
+
 ext {
   groovyVersion   = '2.3.4'
   spockVersion    = '0.7-groovy-2.0'
   codenarcVersion = '0.21'
   jacksonVersion  = '2.4.1'
-  feignVersion    = '6.1.3'
 }
 
 repositories {
   mavenCentral()
+  maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
@@ -48,14 +35,9 @@ dependencies {
 
   compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1:'
 
-  // Feign
-  compile "com.netflix.feign:feign-jackson:${feignVersion}"
-  compile "com.netflix.feign:feign-jackson:${feignVersion}"
-
-
   // Testing
   testCompile "org.spockframework:spock-core:${spockVersion}"
-  compile 'co.freeside:betamax:1.1.2'
+  compile 'co.freeside:betamax:1.2-SNAPSHOT'
 }
 
 processResources {
@@ -79,90 +61,8 @@ codenarc {
   maxPriority3Violations = 10
 }
 
-
-tasks.withType(Groovydoc) {
-  link 'http://download.oracle.com/javase/6/docs/api/',
-         'java.util',
-         'java.lang'
-
-  docTitle    = 'Groovy API Documentation for groovy-pluralize-en $version'
-  windowTitle = 'Groovy API for groovy-pluralize-en $version'
-  footer      = "<p style='text-align: center'>Groovy API Documentation for groovy-pluralize-en $version - Licensed under the Apache License, Version 2.0 - <#
-}
-
-// ----- [ Packaging and publishing ] -----
-
-task sourceJar(type: Jar) {
-  classifier 'sources'
-  from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: groovydoc) {
-  classifier = 'javadoc'
-  from groovydoc
-}
-
-signing {
-  required { isReleaseVersion && gradle.taskGraph.hasTask('uploadArchives') }
-  sign configurations.archives
-}
-
-artifacts {
-  archives javadocJar
-  archives sourceJar
-  archives jar
-}
-
-uploadArchives { task ->
-  task.onlyIf { isReleaseVersion || ! project.hasProperty('ci') }
-
-  repositories {
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-      gradle.taskGraph.whenReady { taskGraph ->
-        if (taskGraph.hasTask(task)) {
-          repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
-          }
-          snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
-          }
-        }
-      }
-
-      pom.project {
-        name "${project.name}:${project.version}"
-        description "${project.description}"
-        inceptionYear '2014'
-        url project_url
-        packaging 'jar'
-
-        scm {
-          connection 'git@github.com:david-w-millar/groovy-pluralize-en.git'
-          developerConnection 'git@github.com:david-w-millar/groovy-pluralize-en.git'
-          url project_url
-        }
-
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
-
-        developers {
-          developer {
-            id 'david-w-millar'
-            name 'David W Millar'
-            email 'david.w.millar@gmail.com'
-            organization project_url
-            organizationUrl project_url
-          }
-        }
-
-      }
-    }
-  }
-}
+//jacocoTestReport {
+  //reports { html.enabled true }
+//}
 
 
